add delete and update to all

--- a/supermarket/templates/categories/category.htm
+++ b/supermarket/templates/categories/category.htm
@@ -42,7 +42,7 @@
           
           
           <td>
-            <a href=""><button type="button" class="btn btn-danger">Delete</button></a>
+            <a href="{% url 'delete_category' category.id %}"><button type="button" class="btn btn-danger">Delete</button></a>
             <a href=""><button type="button" class="btn btn-success">Edit</button></a>
         </td>
         </tr>
