--- a/supermarket/templates/supermarkert/login.htm
+++ b/supermarket/templates/supermarkert/login.htm
@@ -69,7 +69,7 @@
             </div>
 
             <!-- Submit button -->
-            <a href="../dashboard/home"><button type="button" class="btn  btn-block mb-4 text-white " style="background-color :#f08024; font-weight: bold; font-size: x-large;">
+            <a href="../dashboard/"><button type="button" class="btn  btn-block mb-4 text-white " style="background-color :#f08024; font-weight: bold; font-size: x-large;">
               Sign in
             </button></a>
           </form>
