--- a/supermarket/templates/base/sidebar.htm
+++ b/supermarket/templates/base/sidebar.htm
@@ -20,6 +20,8 @@
       src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
       crossorigin="anonymous"
     ></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
   </head>
   <body class="sb-nav-fixed">
     <nav
@@ -101,28 +103,34 @@
                 </div>
                 Dashboard
               </a>
-              <a class="nav-link" href="category" style="color: white">
+              <a class="nav-link" href="dashboard/" style="color: white">
                 <div class="sb-nav-link-icon">
                   <i class="fas fa-category-alt"></i>
                 </div>
                 Categories
               </a>
-              <a class="nav-link" href="category" style="color: white">
+              <a class="nav-link" href="employees/" style="color: white">
                 <div class="sb-nav-link-icon">
                   <i class="fas fa-category-alt"></i>
                 </div>
                 Employees
               </a>
-              <a class="nav-link" href="category" style="color: white">
+              <a class="nav-link" href="supply/" style="color: white">
                 <div class="sb-nav-link-icon">
                   <i class="fas fa-category-alt"></i>
                 </div>
                 Supplies
               </a>
- 
+              <a class="nav-link" href="category" style="color: white">
+                <div class="sb-nav-link-icon">
+                  <i class="fas fa-category-alt"></i>
+                </div>
+               Customers
+              </a>
+           
               <a
                 class="nav-link collapsed"
-                href="#"
+                href="product"
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseLayouts"
                 aria-expanded="false"
@@ -217,8 +225,8 @@
             </div>
           </div>
           <div class="sb-sidenav-footer">
-            <div class="small">Logged in as:</div>
-            Admin
+            <div class="small" style="color: #E2B590;">Logged in as:</div>
+            <p class="" style="color: #E2B590;">Admin</p>
           </div>
         </nav>
       </div>
@@ -245,6 +253,9 @@
         </footer>
       </div>
     </div>
+
+
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
