--- a/supermarket/templates/dashboard/home.htm
+++ b/supermarket/templates/dashboard/home.htm
@@ -6,52 +6,55 @@
          
 
 <div class="container-fluid px-4">
-    <i><h3 class="mt-4 ">Home</h3></i>
+   
 
     <div class="row mt-5">
         <div class="col-xl-3 col-md-6">
             <div class=" card text-white mb-4" style="background-color: #f7f7f7;">
-                <div class="text-black pt-2 " style="padding-left: 10px;">Primary Card</div>
-                <div class="pt-3 d-flex align-items-center justify-content-between">
-                    <a class="small text-white stretched-link" href="#"></a>
-                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                </div>
+                <div class="text-black p-3 " style="padding-left: 10px;">Number of categories</div>
+                
+                    
+                    <div class="d-flex justify-content-center pt-3 pb-2 text-primary">{{ Categories_len }}</div>
+               
+            </div>
+        </div>
+
+        <div class="col-xl-3 col-md-6">
+            <div class=" card text-white mb-4" style="background-color: #f7f7f7;">
+                <div class="text-black p-3 " style="padding-left: 10px;">Total Number of Products</div>
+                
+                    
+                    <div class="d-flex justify-content-center pt-3 pb-2 text-primary">{{ data_length }}</div>
+               
+            </div>
+        </div>
+
+        <div class="col-xl-3 col-md-6">
+            <div class=" card text-white mb-4" style="background-color: #f7f7f7;">
+                <div class="text-black p-3 " style="padding-left: 10px;">Number of Employees</div>
+                
+                    
+                    <div class="d-flex justify-content-center pt-3 pb-2 text-primary">{{ Employee_len }}</div>
+               
             </div>
         </div>
         <div class="col-xl-3 col-md-6">
-            <div class="card bg-warning text-white mb-4">
-                <div class="card-body">Warning Card</div>
-                <div class="card-footer d-flex align-items-center justify-content-between">
-                    <a class="small text-white stretched-link" href="#">View Details</a>
-                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                </div>
+            <div class=" card text-white mb-4" style="background-color: #f7f7f7;">
+                <div class="text-black p-3 " style="padding-left: 10px;">Number of Supplies</div>
+                
+                    
+                    <div class="d-flex justify-content-center pt-3 pb-2 text-primary">{{ supply_len }}</div>
+               
             </div>
         </div>
-        <div class="col-xl-3 col-md-6">
-            <div class="card bg-success text-white mb-4">
-                <div class="card-body">Success Card</div>
-                <div class="card-footer d-flex align-items-center justify-content-between">
-                    <a class="small text-white stretched-link" href="#">View Details</a>
-                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                </div>
-            </div>
-        </div>
-        <div class="col-xl-3 col-md-6">
-            <div class="card bg-danger text-white mb-4">
-                <div class="card-body">Danger Card</div>
-                <div class="card-footer d-flex align-items-center justify-content-between">
-                    <a class="small text-white stretched-link" href="#">View Details</a>
-                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                </div>
-            </div>
-        </div>
+        
     </div>
     <div class="row">
         <div class="col-xl-6">
             <div class="card mb-4">
                 <div class="card-header">
                     <i class="fas fa-chart-area me-1"></i>
-                    Area Chart Example
+                    products 
                 </div>
                 <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
             </div>
@@ -60,7 +63,7 @@
             <div class="card mb-4">
                 <div class="card-header">
                     <i class="fas fa-chart-bar me-1"></i>
-                    Bar Chart Example
+                    supplies
                 </div>
                 <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
             </div>
