--- a/supermarket/templates/employees/employee_list.htm
+++ b/supermarket/templates/employees/employee_list.htm
@@ -38,6 +38,7 @@
         </tr>
       </tfoot>
       <tbody>
+       
         {% for employee in employees %}
         <tr>
           <td>{{ employee.name }}</td>
@@ -46,7 +47,7 @@
           
           <td>
             <a href="{% url 'delete_employee' employee.id %}"><button type="button" class="btn btn-danger">Delete</button></a>
-            <a href="{% url 'delete_employee' employee.id %}"><button type="button" class="btn btn-success">Edit</button></a>
+            <a href="#" class="btn btn-success edit-product" data-product-id="{{ product.id }}">Edit</a>
         </td>
         </tr>
         {% endfor %}
