--- a/supermarket/templates/base/sidebar.htm
+++ b/supermarket/templates/base/sidebar.htm
@@ -29,9 +29,10 @@
       style="background-color: #202f2b"
     >
       <!-- Navbar Brand-->
+      
       <a
         class="navbar-brand ps-3"
-        href="dashboard/home"
+        href="{% url 'home' %}"
         style="font-weight: 44px; font-size: x-large; color: #f08024"
         >{% block projectname %} Supermarket {% endblock %}</a
       >
