--- a/supermarket/templates/base/sidebar.htm
+++ b/supermarket/templates/base/sidebar.htm
@@ -244,7 +244,7 @@
             <div
               class="d-flex align-items-center justify-content-between small"
             >
-              <div class="text-muted">Copyright &copy; Your Website 2023</div>
+              <div class="text-muted">Copyright &copy; supermarket 2023</div>
               <div>
                 <a href="#">Privacy Policy</a>
                 &middot;
