--- a/supermarket/templates/base/base.htm
+++ b/supermarket/templates/base/base.htm
@@ -27,21 +27,21 @@
     <!-- fontawesome -->
     <link rel="stylesheet" href="{% static 'landingpageStaticFile/css/all.min.css' %} " />
     <!-- bootstrap -->
-    <link rel="stylesheet" href="../../static/landingpageStaticFile/css/all.min.css" />
+    <link rel="stylesheet" href="static/landingpageStaticFile/css/all.min.css" />
     <!-- bootstrap -->
     <link
       rel="stylesheet"
-      href="{% static 'landingpageStaticFile/bootstrap/css/bootstrap.min.css' %}"
+      href="static/landingpageStaticFile/bootstrap/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="../../static/landingpageStaticFile/bootstrap/css/bootstrap.min.css"
+      href="static/landingpageStaticFile/bootstrap/css/bootstrap.min.css"
     />
     <!-- owl carousel -->
     <link rel="stylesheet" href="{% static 'landingpageStaticFile/css/owl.carousel.css' %}" />
     
         <!-- owl carousel -->
-        <link rel="stylesheet" href="../../static/landingpageStaticFile/css/owl.carousel.css" />
+        <link rel="stylesheet" href="static/landingpageStaticFile/css/owl.carousel.css" />
     <!-- magnific popup -->
     <link rel="stylesheet" href="{% static 'landingpageStaticFile/css/magnific-popup.css' %}" />
     <!-- animate css -->
