--- a/supermarket/templates/base/base.htm
+++ b/supermarket/templates/base/base.htm
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   {% load static %}
@@ -25,33 +26,24 @@
       rel="stylesheet"
     />
     <!-- fontawesome -->
-    <link rel="stylesheet" href="../../staticlandingpageStaticFile/css/all.min.css " />
-    <!-- bootstrap -->
-    <link rel="stylesheet" href="../../static/landingpageStaticFile/css/all.min.css" />
+    <link rel="stylesheet" href="{% static 'landingpageStaticFile/css/all.min.css' %} " />
     <!-- bootstrap -->
     <link
       rel="stylesheet"
-      href="../../static/landingpageStaticFile/bootstrap/css/bootstrap.min.css}"
-    />
-    <link
-      rel="stylesheet"
-      href="../../static/landingpageStaticFile/bootstrap/css/bootstrap.min.css"
+      href="{% static 'landingpageStaticFile/bootstrap/css/bootstrap.min.css' %}"
     />
     <!-- owl carousel -->
-    <link rel="stylesheet" href="../../static/landingpageStaticFile/css/owl.carousel.css" />
-    
-        <!-- owl carousel -->
-        <link rel="stylesheet" href="../../static/landingpageStaticFile/css/owl.carousel.css" />
+    <link rel="stylesheet" href="{% static 'landingpageStaticFile/css/owl.carousel.css' %}" />
     <!-- magnific popup -->
-    <link rel="stylesheet" href="../../static/landingpageStaticFile/css/magnific-popup.css" />
+    <link rel="stylesheet" href="{% static 'landingpageStaticFile/css/magnific-popup.css' %}" />
     <!-- animate css -->
-    <link rel="stylesheet" href="../../static/landingpageStaticFile/css/animate.css" />
+    <link rel="stylesheet" href="{% static 'landingpageStaticFile/css/animate.css' %}" />
     <!-- mean menu css -->
-    <link rel="stylesheet" href="../../static/landingpageStaticFile/css/meanmenu.min.css" />
+    <link rel="stylesheet" href="{% static 'landingpageStaticFile/css/meanmenu.min.css' %}" />
     <!-- main style -->
-    <link rel="stylesheet" href="../../static/landingpageStaticFile/css/main.css" />
+    <link rel="stylesheet" href="{% static 'landingpageStaticFile/css/main.css' %}" />
     <!-- responsive -->
-    <link rel="stylesheet" href="../../static/landingpageStaticFile/css/responsive.css" />
+    <link rel="stylesheet" href="{% static 'landingpageStaticFile/css/responsive.css' %}" />
   </head>
 
   <body>
@@ -66,24 +58,24 @@
     
     
      <!-- jquery -->
-     <script src="../../static/landingpageStaticFile/js/jquery-1.11.3.min.js"></script>
+     <script src="{% static 'landingpageStaticFile/js/jquery-1.11.3.min.js' %}"></script>
      <!-- bootstrap -->
-     <script src="../../static/landingpageStaticFile/bootstrap/js/bootstrap.min.js"></script>
+     <script src="{% static 'landingpageStaticFile/bootstrap/js/bootstrap.min.js' %}"></script>
      <!-- count down -->
-     <script src="../../static/landingpageStaticFile/js/jquery.countdown.js"></script>
+     <script src="{% static 'landingpageStaticFile/js/jquery.countdown.js' %}"></script>
      <!-- isotope -->
-     <script src="../../static/landingpageStaticFile/js/jquery.isotope-3.0.6.min.js"></script>
+     <script src="{% static 'landingpageStaticFile/js/jquery.isotope-3.0.6.min.js' %}"></script>
      <!-- waypoints -->
-     <script src="../../static/landingpageStaticFile/js/waypoints.js"></script>
+     <script src="{% static 'landingpageStaticFile/js/waypoints.js' %}"></script>
      <!-- owl carousel -->
-     <script src="../../static/landingpageStaticFile/js/owl.carousel.min.js"></script>
+     <script src="{% static 'landingpageStaticFile/js/owl.carousel.min.js' %}"></script>
      <!-- magnific popup -->
-     <script src="../../static/landingpageStaticFile/js/jquery.magnific-popup.min.js"></script>
+     <script src="{% static 'landingpageStaticFile/js/jquery.magnific-popup.min.js' %}"></script>
      <!-- mean menu -->
-     <script src="../../static/landingpageStaticFile/js/jquery.meanmenu.min.js"></script>
+     <script src="{% static 'landingpageStaticFile/js/jquery.meanmenu.min.js' %}"></script>
      <!-- sticker js -->
-     <script src="../../static/landingpageStaticFile/js/sticker.js"></script>
+     <script src="{% static 'landingpageStaticFile/js/sticker.js' %}"></script>
      <!-- main js -->
-     <script src="../../static/landingpageStaticFile/js/main.js"></script>
+     <script src="{% static 'landingpageStaticFile/js/main.js' %}"></script>
   </body>
   </html>
